add new article

--- a/front-end/Jeux.html
+++ b/front-end/Jeux.html
@@ -6,22 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-jeux.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
 </head>
 
 <body>
@@ -91,6 +75,22 @@
                 <p>Jeu pour la Playstation 5</p>
                 <p>Bon état</p>
                 <p>48€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place7">
+                <img src="img/articles/Jeux/echecs.jpg" alt="jeu d'echecs" class="echecs">
+                <p>Echecs</p>
+                <p>jeu de société</p>
+                <p>Bon état</p>
+                <p>8€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place8">
+                <img src="img/articles/Jeux/astral-chain.jpg" alt="astral chain" class="astral">
+                <p>Astral chain</p>
+                <p>Jeu pour la Switch</p>
+                <p>Bon état</p>
+                <p>40€</p>
                 <button type="submit">Ajouter au panier</button>
             </div>
         </div>
