--- a/front-end/maison.html
+++ b/front-end/maison.html
@@ -6,22 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-maison.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
 </head>
 
 <body>
@@ -56,7 +40,7 @@
             <div class="place2">
                 <img src="img/articles/Maison/chaise.jpg" alt="chaise">
                 <p>Chaise</p>
-                <p>Devnt une table ou un bureau</p>
+                <p>Devant une table ou un bureau</p>
                 <p>Très bon état</p>
                 <p>8€</p>
                 <button type="submit">Ajouter au panier</button>
@@ -90,6 +74,22 @@
                 <p>Stocker votre linge avant de le mettre au lave-linge</p>
                 <p>Satisfaisant</p>
                 <p>13€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place7">
+                <img src="img/articles/Maison/table.jpg" alt="table à manger" class="table">
+                <p>Table</p>
+                <p>Un endroit pour manger</p>
+                <p>Satisfaisant</p>
+                <p>60€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place8">
+                <img src="img/articles/Maison/tabouret.jpg" alt="tabouret" class="tabouret">
+                <p>tabouret</p>
+                <p>Devant une table ou un bureau avec liberté</p>
+                <p>Satisfaisant</p>
+                <p>30€</p>
                 <button type="submit">Ajouter au panier</button>
             </div>
         </div>
