--- a/front-end/objet.html
+++ b/front-end/objet.html
@@ -6,22 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-objet.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
 </head>
 
 <body>
@@ -91,6 +75,22 @@
                 <p>Des couverts en argent pour dégustation de vos en-cas</p>
                 <p>Neuf</p>
                 <p>6€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place7">
+                <img src="img/articles/Objets/multiprise.jpg" alt="multiprise" class="multiprise">
+                <p>Multiprise</p>
+                <p>Rester brancher sur plusieurs fils</p>
+                <p>Neuf</p>
+                <p>5€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place8">
+                <img src="img/articles/Objets/verre.jpg" alt="verre" class="verre">
+                <p>Verre</p>
+                <p>Essayer de ne pas boire la tasse</p>
+                <p>Neuf</p>
+                <p>5€</p>
                 <button type="submit">Ajouter au panier</button>
             </div>
         </div>
