--- a/front-end/accessoires.html
+++ b/front-end/accessoires.html
@@ -6,22 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-accessoires.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
 </head>
 
 <body>
@@ -91,6 +75,22 @@
                 <p>Digne d'une telle beauté</p>
                 <p>Satisfaisant</p>
                 <p>11€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place7">
+                <img src="img/articles/Accessoires/peigne.jpg" alt="peigne" class="peigne">
+                <p>Peigne</p>
+                <p>Digne de votre cuir chevelu</p>
+                <p>Satisfaisant</p>
+                <p>5€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place8">
+                <img src="img/articles/Accessoires/seche.jpg" alt="sèche cheveux" class="seche">
+                <p>Sèche cheveux</p>
+                <p>Cheveux tout sec</p>
+                <p>Satisfaisant</p>
+                <p>16€</p>
                 <button type="submit">Ajouter au panier</button>
             </div>
         </div>
