--- a/front-end/scolaire.html
+++ b/front-end/scolaire.html
@@ -6,23 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-scolaire.css">
     <title>Vide Grenier en Ligne</title>
-    <script src="js/article.js"></script>
-    <script src="js/button.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/forgot.js"></script>
-    <script src="js/insc.js"> </script>
-    <script src="js/panier.js"></script>
-    <script src="js/panier2.js"></script>
-    <script src="db.js"></script>
-    <script src="js/vendres.js"></script>
-    <script src="node/accueil.js"></script>
-    <script src="node/articles.js"></script>
-    <script src="node/contact.js"></script>
-    <script src="node/inscription.js"></script>
-    <script src="node/paniers.js"></script>
-    <script src="node/paniers2.js"></script>
-    <script src="node/vendre.js"></script>
-    
 </head>
 
 <body>
@@ -92,6 +75,22 @@
                 <p>Idéal pour ranger vos outils scolaires</p>
                 <p>Satisfaisant</p>
                 <p>5€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place7">
+                <img src="img/articles/Scolaire/compas.jpg" alt="compas" class="compas">
+                <p>compas</p>
+                <p>Idéal pour des distances et cercles</p>
+                <p>Satisfaisant</p>
+                <p>2€</p>
+                <button type="submit">Ajouter au panier</button>
+            </div>
+            <div class="place8">
+                <img src="img/articles/Scolaire/equerre.jpg" alt="equerre" class="equerre">
+                <p>Equerre</p>
+                <p>Idéal pour les théorèmes</p>
+                <p>Satisfaisant</p>
+                <p>3€</p>
                 <button type="submit">Ajouter au panier</button>
             </div>
         </div>
