--- a/front-end/Contact.html
+++ b/front-end/Contact.html
@@ -4,37 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-contact.css">
+    <link rel="stylesheet" href="/css/style-contact.css">
     <title>Vide Grenier en Ligne</title>
 </head>
 
 <body>
-
     <header class="site-header">
         <div class="header-inner">
             <div class="logo-container">
-                <a href="Accueil.html"> <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo"> </a>
+                <a href="Accueil.html">
+                    <img src="img/logo.png" alt="Mon Vide Grenier Logo" class="site-logo">
+                </a>
             </div>
             <nav class="main-navigation">
                 <a href="Articles.html" class="nav-link">Articles</a>
                 <a href="Vendre.html" class="nav-link">Vendre</a>
                 <a href="Contact.html" class="nav-link">Contact</a>
                 <a href="Accueil.html" class="nav-link">Accueil</a>
-                <a href="panier.html" class="nav-link">Mon-panier</a>
-                <a href="connexion.html" class="nav-link">Connexion</a>
+                <a href="panier.html" class="nav-link">Mon Panier</a>
+                <a href="connexion.html" id="loginLink" class="nav-link">Connexion</a>
+                <div id="userDetails" class="user-details" style="display: none;">
+                    <span id="userEmail" class="nav-link"></span>
+                    <span id="userName" class="nav-link"></span>
+                    <a href="#" id="logoutButton" class="nav-link logout-button">Déconnexion</a>
+                </div>
             </nav>
         </div>
     </header>
 
     <div class="container">
-        <h1 class="site-header">Contact</h1>
-        <div class="tell">
-            <p> <b>Vous pouvez rester en contact avec notre service technique
-                et demander de l'aide au :</b> </p>
-            <p> <b><a class="numero" href="tel:0748382854">Par téléphone</a> ou par email sur <a class="mail" href="mailto:tresorsdhier@network.com">tresorsdhier@network.com</a></b> </p>
-        </div>
-    
+    <h1 class="site-header">Contact</h1>
+    <div class="tell">
+        <p><b>Vous pouvez rester en contact avec notre service technique et demander de l'aide au :</b></p>
+        <p><b><a class="numero" href="tel:0748382854">Par téléphone</a> ou par email sur <a class="mail" href="mailto:tresorsdhier@network.com">tresorsdhier@network.com</a></b></p>
     </div>
+</div>
+
 
     <footer>
         <div class="footer-icons">
@@ -51,6 +56,34 @@
         <p>© 2024 Trésorsdhier</p>
     </footer>
 
+    <script defer>
+        document.addEventListener('DOMContentLoaded', () => {
+            const user = JSON.parse(localStorage.getItem('user'));
+            const token = localStorage.getItem('token');
+
+            const userDetailsDiv = document.getElementById('userDetails');
+            const userEmailSpan = document.getElementById('userEmail');
+            const loginLink = document.getElementById('loginLink');
+            const logoutButton = document.getElementById('logoutButton');
+
+            if (user && token) {
+                userEmailSpan.textContent = `Bienvenue, ${user.prenom} ${user.nom} (${user.email})`;
+                userDetailsDiv.style.display = 'block';
+                loginLink.style.display = 'none';
+
+                logoutButton.addEventListener('click', () => {
+                    localStorage.removeItem('token');
+                    localStorage.removeItem('user');
+                    window.location.href = 'connexion.html';
+                });
+            } else {
+                userDetailsDiv.style.display = 'none';
+                loginLink.style.display = 'block';
+                loginLink.textContent = 'Connexion';
+                loginLink.href = 'connexion.html';
+            }
+        });
+    </script>
 </body>
 
 </html>
